# introduction-to-python

./: Dockerfile  HOMEWORK.md  README.md
.devcontainer/: devcontainer.json
01-Beginner/: README.md
01-PythonBasics/: README.md
02-Explorer/: README.md
02-Testing/Assignment/: README.md
03-CLIs/: README.md
03-CLIs/Assignments/: README.md
03-CLIs/CLIs/: main.py
03-CLIs/Code/: setup.py
03-Developer/04-APIs/: README.md
04-APIs/: README.md
05-FullStack/: README.md
05-FullStack/PetApp/: requirements.txt
05-FullStack/pet-pal/: .gitlab-ci.yml
05-FullStack/pet-pal /: README.md  cookiecutter-config-file.yml
06-Review/: README.md
06-Review/password-generator/: just_a_file.py  main.py  setup.py
06-Review/pet-pal/: .gitlab-ci.yml  cookiecutter-config-file.yml
06-Review/tiny_api/: README.md  app.py  config.py
06-Testing/: README.md  setup.py
07-API-Testing-FastAPI/: README.md  pyproject.toml
API/app/: app.py
Beginner/: README.md
CLIs/: Pipfile  README.md  main.py  setup.py
CLIs/schemas/: config_file.py
Django/: README.md
Django/cloudhippie/: manage.py
Explorer/: README.md
FastApi/docs/: test.yml
Lesson1/: booleans.py  functions.py  integers.py  lists.py
Lesson2/: README.md
Lesson2/Classes/: api_client.py  classes.py
Lesson2/Modules/: main.py  request_api.py
Lesson3/: README.md
Lesson3/challenges/: numbers.py  strings.py
Lesson3/tests/: test_strings.py
Resources/pet-pal/: README.md
Resources/tiny_api/: config.py  requirements.txt
TDD/: HOMEWORK.md  README.md
TDD/challenges/: lists.py  numbers.py
(+28 files in other folders)
