[tool.poetry]
name = "07-api-testing"
version = "0.1.0"
description = ""
authors = ["Justin Rice <jsrice7391@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.87.0"
uvicorn = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
